--- a/templates/index.html
+++ b/templates/index.html
@@ -18,11 +18,14 @@
           <input type="text" name="url" class="form-control" id="url-box" placeholder="Enter URL..." style="max-width: 300px;" autofocus required>
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form> -->
       <br>
+      {% for result in results %}
+        <h3>{{ result }}</h3>
+      {% endfor %}
       {% for error in errors %}
         <h4>{{ error }}</h4>
-      {% endfor %} -->
+      {% endfor %}
     </div>
     <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
